Fix T53808: VSE doesn't show scene strip markers